@@ -136,7 +136,8 @@ UINT CChangedDlg::ChangedStatusThread()
 	CString temp;
 	if (!m_FileListCtrl.GetStatus(m_pathList, m_bRemote, m_bShowIgnored != FALSE, m_bShowUserProps != FALSE))
 	{
-		m_FileListCtrl.SetEmptyString(m_FileListCtrl.GetLastErrorMessage());
+		if (!m_FileListCtrl.GetLastErrorMessage().IsEmpty())
+			m_FileListCtrl.SetEmptyString(m_FileListCtrl.GetLastErrorMessage());
 	}
 	DWORD dwShow = SVNSLC_SHOWVERSIONEDBUTNORMAL | SVNSLC_SHOWLOCKS | SVNSLC_SHOWSWITCHED | SVNSLC_SHOWINCHANGELIST;
 	dwShow |= m_bShowUnversioned ? SVNSLC_SHOWUNVERSIONED : 0;
